--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,31 @@
 {
-"name": "gymBuddy",
-  "start_url": "/",
-  "scope": "/",
-  "lang": "en-EN",
   "theme_color": "#370909",
-  "display": "standalone",
   "background_color": "#370909",
-  "orientation": "portrait"
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/gymbuddy/",
+  "name": "gymbuddy",
+  "short_name": "gymbuddy",
+  "icons": [
+      {
+          "src": "/gymbuddy/icon-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+      },
+      {
+          "src": "/gymbuddy/icon-256x256.png",
+          "sizes": "256x256",
+          "type": "image/png"
+      },
+      {
+          "src": "/gymbuddy/icon-384x384.png",
+          "sizes": "384x384",
+          "type": "image/png"
+      },
+      {
+          "src": "/gymbuddy/-512x512.png",
+          "sizes": "512x512",
+          "type": "image/png"
+      }
+  ]
 }
