--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,7 +23,7 @@
           "type": "image/png"
       },
       {
-          "src": "/gymbuddy/-512x512.png",
+          "src": "/gymbuddy/icon-512x512.png",
           "sizes": "512x512",
           "type": "image/png"
       }
