--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.8",
+    "chart.js": "^4.4.3",
     "firebase": "^10.12.4",
     "next": "14.2.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
