--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "firebase": "^10.12.4",
     "next": "14.2.5",
     "react": "^18",
+    "react-barcode-scanner": "^2.1.0",
     "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18"
   },
   "devDependencies": {
