--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-barcode-scanner": "^2.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-swipeable-list": "^1.9.3"
   },
   "devDependencies": {
     "@types/node": "^20",
