--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "firebase": "^10.12.4",
     "next": "14.2.5",
     "react": "^18",
-    "react-barcode-scanner": "^2.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
-    "react-swipeable-list": "^1.9.3"
+    "react-swipeable-list": "^1.9.3",
+    "terser": "^5.31.6"
   },
   "devDependencies": {
     "@types/node": "^20",
