--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@ducanh2912/next-pwa": "^10.2.8",
     "chart.js": "^4.4.3",
     "firebase": "^10.12.4",
-    "next": "14.2.5",
+    "next": "^14.2.6",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
